intergrate crud page

--- a/managing_app_frontend/tsconfig.json
+++ b/managing_app_frontend/tsconfig.json
@@ -4,4 +4,13 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
+  ,
+  // make ts compiler understand the baseUrl and paths
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "src/*": ["*"]
+    }
+  }
+
 }
