--- a/managing_app_frontend/package.json
+++ b/managing_app_frontend/package.json
@@ -16,14 +16,22 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/styled-engine-sc": "^7.3.1",
+    "@mui/x-data-grid": "^8.10.0",
+    "@mui/x-data-grid-pro": "^8.10.0",
+    "@mui/x-date-pickers": "^8.10.0",
+    "@mui/x-date-pickers-pro": "^8.10.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
