--- a/managing_app_frontend/package.json
+++ b/managing_app_frontend/package.json
@@ -23,6 +23,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
