implementing sign in feature

--- a/managing_app_frontend/tsconfig.json
+++ b/managing_app_frontend/tsconfig.json
@@ -1,16 +1,10 @@
 {
+  "exclude": ["node_modules", "dist", "build", "**/*.log"],
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
   ,
-  // make ts compiler understand the baseUrl and paths
-  "compilerOptions": {
-    "baseUrl": "src",
-    "paths": {
-      "src/*": ["*"]
-    }
-  }
 
 }
