--- a/managing_app_frontend/package.json
+++ b/managing_app_frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers-pro": "^8.10.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "react": "^19.1.0",
